Initial vglass translation

--- a/p5/vglass_testsys.tex
+++ b/p5/vglass_testsys.tex
@@ -1,75 +1,74 @@
 
 \FloatBarrier
-\section{Колебательная система с гистерезисом в возвращающей силе} %  % {{{1 _VGLASS_
+\section{Коливальна система з гістерезисом в силі, що повертає} % {{{1 _VGLASS_
 \label{atu:sect:vglass}
 
 \LinkRef{
   vglass: ITMM-2013
 }
 
-\subsection{Определение системы и анализ её динамики} %  % {{{2 _vglass_task
+\subsection{Визначення системи та аналіз її динаміки} % {{{2 vglass_task
 
-Колебательные системы с различными видами нелинейностями
-как в возвращающей силе, так и члене при первой производной,
-часто рассматриваются как потенциальные кандидаты в хаотические системы.
-Особый интерес представляют системы, нелинейные компоненты которых
-отображают реальные элементы систем управления~\cite{atu_st85,atu_ISDMCI2013,atu_asau20}.
-Одним из таких существенно нелинейных элементов
-является гистерезис~\cite{sys_hyst,in_theory_mech_vibro,ivanov_alg_id_dyn_hyst,andronn_id_ns_hyst,mai_iss_dyn_isp}.
-Рассмотрим изначально неустойчивую  систему,
-которая стабилизируется релейно-пропорциональным
-стабилизирующим воздействием.
-Такая система стабилизации активируется при заданном отклонении наблюдаемой
-величины, а выключается при меньшем. Такая неоднозначность в поведении
-систем стабилизации приводит к разнообразным колебательным явлениям вблизи
-точки стабилизации, а все попытки линеаризации рассматриваемых
-нелинейностей, в данном случае, приводят к принципиальным ошибкам в
-моделировании.
+Коливальні системи з різними видами нелінійних залежностей
+як в силі, що повертає, так і у члені при першій похідній,
+часто розглядаються як потенційні кандидати в хаотичні
+системи. Особливий інтерес представляють системи, нелінійні
+компоненти яких відображають реальні елементи систем
+управління~\cite{atu_st85,atu_ISDMCI2013,atu_asau20}. Одним з таких істотно
+нелінійних елементів є гістерезис~\cite{sys_hyst, in_theory_mech_vibro,ivanov_alg_id_dyn_hyst, andronn_id_ns_hyst, mai_iss_dyn_isp}.
+Розглянемо спочатку нестійку систему, яка стабілізується релейно-пропорційним стабілізуючим
+впливом. Така система стабілізації активується при заданому
+відхиленні величини, що спостерігається, а вимикається при
+меншому. Така неоднозначність в поведінці систем стабілізації
+призводить до різноманітних коливальних явищ поблизу
+точки стабілізації, а всі спроби лінеаризації розглянутих
+нелінійностей, в даному випадку, призводять до принципових
+помилок в моделюванні.
 
-Наличие точки неустойчивого равновесия, требующего стабилизирующего
-воздействия в большем масштабе, явной, а зачастую и скрытой нелинейности
-элементов системы, априорная параметрическая неопределенность внешних
-воздействий, --- всё это создаёт предпосылки для появления у систем сложной
-колебательной динамики, в том числе и хаотической.
-Рассмотрим уравнение, задающее динамику этой системы:
+Наявність точки нестійкої рівноваги, що вимагає стабілізуючого
+впливу в більшому масштабі, явною, а часто і прихованої
+нелінійності елементів системи, апріорна параметрична
+невизначеність зовнішніх впливів --- все це створює передумови
+для появи у систем складної коливальної динаміки, в тому числі
+і хаотичної. Розглянемо рівняння, що задає динаміку цієї системи:
 %
 \begin{equation}
   \ddot{x} + c_o \dot{x} + r( x, \ldots ) = u(t),
   \label{atu:eq:vglass}
 \end{equation}
 %
-где
-$x(t)$ -- координата (выходной сигнал),
-$ c_0$ -- безразмерный коэффициент демпфирования,
-$u(t) = U_{in} \sin( \omega_{in} t ) $ -- внешняя возмущающая сила,
-$r( x, \ldots) $ --- возвращающая сила,
-включающая линейную составляющую ($ax$, $a<0$),
-обуславливающую неустойчивость при малых отклонениях,
-и гистерезисную компоненту, которая задаётся алгоритмически.
-Характерный вид возвращающий силы приведён на  рис.~\ref{atu:f:vg_rf}.
+де
+$x(t)$ --- координата (вихідний сигнал),
+$c_0$ --- безрозмірний коефіцієнт демпфірування,
+$u(t) = U_{in} \sin (\omega_{in} t) $ --- зовнішня сила,
+$r(x, \ldots) $ --- сила, що повертає, яка включає лінійну складову ($ax$,$ a <0 $),
+що зумовлює нестійкість при малих
+відхиленнях, і гістерезисну компоненту, яка задається
+алгоритмічно. Характерний вид сили, що повертає, наведено на
+рис.~\ref{atu:f:vg_rf}.
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.5\textwidth]{p/cha/vg/vg_rf-p_rf.png} }
-\caption{Гистерезисная возвращающая сила}
+\caption{Гістерезисна сила, що повертає}
 \label{atu:f:vg_rf}
 \end{figure}
 
-Параметрами этой зависимости, помимо уже упомянутого коэффициента $a$,
-являются $s_x$ --- центральная точка включения и выключения
-стабилизирующего воздействия,
-$x_0$ --- полуширина гистерезиса.
-Ширина петли гистерезиса для данной системы определяет
-энергию, которую получает система от системы стабилизации в процессе работы.
-Именно это величина и будет идентифицируемым параметром.
+Параметрами цієї залежності, крім уже згаданого коефіцієнта
+$a$, є
+$s_x$ --- центральна точка включення і виключення стабілізуючого
+впливу,
+$x_0$ --- половина ширини гістерезису. Ширина петлі гістерезису
+для даної системи визначає енергію, яку отримує система від
+системи стабілізації в процесі роботи. Саме це величина і буде
+ідентифікованим параметром.
 
 
-В отличие от системы Дуффинга, рассматриваемая система имеет собственную
-динамику при отсутствии возмущающего воздействия.
-При малых значениях $x_0$ происходят нелинейные,
-но достаточно простые колебания по одну сторону от
-точки $x=0$~(рис.~\ref{atu:f:vglass_phase_f_u00}),
-причём сторона определяется начальными условиями.
-Спектр колебаний весьма бедный.
+На відміну від системи Дуффінга, розглянута система має власну
+динаміку при відсутності впливу, що збурює. При малих значеннях
+$x_0$ відбуваються нелінійні, але досить прості коливання по
+одну сторону від точки
+$ x = 0 $~(рис.~\ref{atu:f:vglass_phase_f_u00}), причому сторона визначається
+початковими умовами. Спектр коливань досить бідний.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -77,15 +76,15 @@ $x_0$ --- полуширина гистерезиса.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_fft-p_f_0x00_0x70_0x12.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы (\ref{atu:eq:vglass}) при $U_{in}=0$ и $x_0=0.12$}
+\caption{Розширений фазовий портрет і спектр системи (\ref{atu:eq:vglass}) при $ U_{in} = 0 $ і $ x_0 = 0.12 $}
 \label{atu:f:vglass_phase_f_u00}
 \end{figure}
 
-При росте параметра $x_0$ динамика системы становится более сложной
-(рис.~\ref{atu:f:vglass_phase_f_u01}),
-однако спектр системы остаётся простым линейчатым.
-Такое поведение сохраняется вплоть до естественного ограничения $x_o < s_x$,
-при этом фазовый портрет приближается к окружности.
+При зростанні параметра
+$ x_0 $ динаміка системи стає складнішою (рис.~\ref{atu:f:vglass_phase_f_u01}),
+однак спектр системи залишається простим лінійчатим. Така
+поведінка зберігається аж до природного обмеження
+$ x_o <s_x $, при цьому фазовий портрет наближається до кола.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -93,16 +92,16 @@ $x_0$ --- полуширина гистерезиса.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_fft-p_f_0x00_0x70_0x15.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы (\ref{atu:eq:vglass}) при $U_{in}=0$ и $x_0=0.15$}
+\caption{Розширений фазовий портрет і спектр системи (\ref{atu:eq:vglass}) при $ U_{in} = 0 $ і $ x_0 = 0.15 $}
 \label{atu:f:vglass_phase_f_u01}
 \end{figure}
 
-При наличии ненулевого внешнего воздействия $u(t)$
-картина заметно усложняется.
-Наблюдаются такие значения параметра $x_0$,
-при которых наблюдается сложный аттрактор, характерный для
-хаотической динамики~(рис.~\ref{atu:f:vglass_phase_f_u10})
-и участки сплошного спектра.
+При наявності ненульового зовнішнього впливу
+$u(t) $ картина помітно ускладнюється. Спостерігаються такі
+значення параметра
+$ x_0 $, при яких спостерігається складний аттрактор, характерний
+для хаотичної динаміки~(рис.~\ref{atu:f:vglass_phase_f_u10}) і ділянки
+суцільного спектра.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -110,16 +109,16 @@ $x_0$ --- полуширина гистерезиса.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_fft-p_f_0x20_0x70_0x05.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы (\ref{atu:eq:vglass}) при $U_{in}=0.2$ и $x_0=0.05$}
+\caption{Розширений фазовий портрет і спектр системи (\ref{atu:eq:vglass}) при $ U_{in} = 0.2 $ і $ x_0 = 0.05 $}
 \label{atu:f:vglass_phase_f_u10}
 \end{figure}
 
-Общим свойством этой системы и системы Дуффинга является то,
-что участок сплошного спектра примыкает к точке нулевой частоты,
-что затрудняет процесс усреднения критерия.
+Загальною властивістю цієї системи і системи Дуффінга є те, що
+ділянка суцільного спектра примикає до точки нульової частоти,
+що ускладнює процес усереднення критерію.
 
-Также наблюдаются такие диапазоны $x_0$,
-в которых наблюдаются регулярные колебания
+Також спостерігаються такі діапазони
+$ x_0 $, в яких спостерігаються регулярні коливання
 (рис.~\ref{atu:f:vglass_phase_f_u11}).
 
 \begin{figure}[ht!]
@@ -128,15 +127,14 @@ $x_0$ --- полуширина гистерезиса.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_fft-p_f_0x20_0x70_0x40.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы (\ref{atu:eq:vglass}) при $U_{in}=0.2$ и $x_0=0.40$}
+\caption{Розширений фазовий портрет і спектр системи (\ref{atu:eq:vglass}) при $ U_{in} = 0.2 $ і $ x_0 = 0.40 $}
 \label{atu:f:vglass_phase_f_u11}
 \end{figure}
 
-Помимо регулярных колебаний, наблюдаются
-режимы сложно-периодической динамики,
-с сложным аттрактором и спектром,
-в котором наблюдаются ряд близко расположенных пиков
-(рис.~\ref{atu:f:vglass_phase_f_u12}).
+Крім регулярних коливань, спостерігаються режими
+складно-періодичної динаміки, з складним аттрактором і
+спектром, в якому спостерігається ряд близько розташованих
+піків (рис.~\ref{atu:f:vglass_phase_f_u12}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -144,105 +142,106 @@ $x_0$ --- полуширина гистерезиса.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_fft-p_f_0x20_0x70_0x70.png}
 \end{center}
-  \caption{Расширенный фазовый портрет и спектр системы (\ref{atu:eq:vglass}) при $U_{in}=0.2$ и $x_0=0.70$}
+\caption{Розширений фазовий портрет і спектр системи (\ref{atu:eq:vglass}) при $ U_{in} = 0.2 $ і $ x_0 = 0.70 $}
 \label{atu:f:vglass_phase_f_u12}
 \end{figure}
 
-Такое поведение сложно, а в случае нестационарного значения параметра
-может быть и невозможно отличить от хаотического поведения.
+Таку поведінка складно, а в разі нестаціонарного значення
+параметра може бути і неможливо відрізнити від хаотичної
+поведінки.
 
-Таким образом, так как система в рабочем диапазоне параметра
-$x_0$ демонстрирует различные виды динамик, в том числе хаотическую,
-то для идентификации имеет смысл рассмотреть набор методов,
-рассматриваемых в данной работе.
+Таким чином, так як система в робочому діапазоні параметра
+$ x_0 $ демонструє різні види динамік, в тому числі хаотичну,
+то для ідентифікації має сенс розглянути набір методів, що
+розглядаються в даній роботі.
 
 % }}}2
 
-\subsection{Анализ и выбор критерия}  % {{{2
+\subsection{Аналіз і вибір критерію} % {{{2
 
-При синтезе критерия для нелинейной колебательной системы,
-если нет возможности использовать
-какой-либо явный и очевидный критерий,
-в первую очередь следует рассмотреть
-критерии вида $q_{x^2}$, $q_{rx}$ и $q_T$.
-Так как гистерезисная возвращающая сила
-не даёт возможности использовать аналитический
-подход, то рассмотрим
-зависимости $q_{rx}$ и $q_T$
-(рис.~\ref{atu:f:vglass_q}),
-полученные путём численного моделирования.
+При синтезі критерію для нелінійної коливальної системи, якщо
+немає можливості використовувати будь-якої явний і очевидний
+критерій, в першу чергу слід розглянути критерії виду
+$q_{x^2} $,
+$q_{rx} $ і
+$q_T$. Так як гістерезисна сила, що повертає, не дає можливості
+використовувати аналітичний підхід, то розглянемо залежності
+$ q_{rx} $ і
+$ q_T $ (рис.~\ref{atu:f:vglass_q}), отримані шляхом чисельного моделювання.
 
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_q1-p_q.png}
 \end{center}
-  \caption{Зависимости $q_{rx}(x_0)$ и $q_T(x_0)$ для системы (\ref{atu:eq:vglass})}
+\caption{Залежності $ q_{rx} (x_0) $ і $ q_T (x_0) $ для системи (\ref{atu:eq:vglass})}
 \label{atu:f:vglass_q}
 \end{figure}
 
-Анализ зависимостей позволяет сделать вывод о том, что критерий $q_T$
-не пригоден для идентификации параметра $x_0$
-рассматриваемой системы, ввиду того,
-что зависимости от параметра, если не принимать во внимание колебания,
-практически отсутствует.
+Аналіз залежностей дозволяє зробити висновок про те, що критерій
+$ q_T $ непридатний для ідентифікації параметра
+$ x_0 $ даної системи, з огляду на те, що залежність від параметра,
+якщо не брати до уваги коливання, практично відсутня.
 
-Применений критерия $q_{rx}$ достаточно противоречиво.
-С одной стороны, в целом наблюдается близкая к линейной зависимость,
-что снижает требования к тонкой настройке системы идентификации.
-С другой стороны, на тех участках,
-где наблюдаются переходы от сложно-периодических колебаний
-к хаотическим, монотонность зависимости нарушается.
-Однако, амплитуда этих возмущений невелика,
-что даёт возможность построения работоспособной системы идентификации,
-но с существенными ограничениями на достижимую точность.
-Таким образом, на неимением лучшего, будем использовать этот критерий.
-
+Застосування критерію
+$ q_{rx} $ досить суперечливо. З одного боку, в цілому
+спостерігається близька до лінійної залежність, що знижує
+вимоги до тонкої настройки системи ідентифікації. З іншого
+боку, на тих ділянках, де спостерігаються переходи від
+складно-періодичних коливань до хаотичних, монотонність
+залежності порушується. Однак, амплітуда цих збурень невелика,
+що дає можливість побудови працездатної системи ідентифікації,
+але з істотними обмеженнями на досяжну точність. Таким чином,
+на брак кращого, будемо використовувати цей критерій.
 
 
 % }}}2
 
-\subsection{Тестовая задача идентификации}  % {{{2
+\subsection{Тестова задача ідентифікації} % {{{2
 
-Для идентификации параметра $x_0$
-колебательной системы с гистерезисной возвращающей силой
-была использована группа методов  ``ql3rlWvnAAW''.
-Использование критерия $q_{rx}$ для данной системы,
-с учетом наличия участков отсутствия монотонности
-требует отдельной проверки работоспособности,
-так как используемый ранее подход с
-медленно изменяющимся параметром (\ref{atu:eq:po_t_ramp}) не позволяет
-отделить ошибку, связанную с установлением режима системы идентификации
-от ошибки, вызванной не вполне адекватным критерием.
+Для ідентифікації параметра
+$ x_0 $ коливальні системи з гістерезисної силою, що повертає, була
+використана група методів ``ql3rlWvnAAW ''. Використання критерію
+$ q_{rx} $ для даної системи, з урахуванням наявності ділянок
+відсутності монотонності вимагає окремої перевірки
+працездатності, так як використовуваний раніше підхід
+з повільно змінюючимся параметром (\ref{atu:eq:po_t_ramp}) не дозволяє
+відокремити похибку, пов'язану з встановленням режиму системи
+ідентифікації від похибки, викликаної не цілком адекватним
+критерієм.
 
-Для определения ошибки идентификации без влияния переходных процессов,
-была проведена серия вычислительных экспериментов.
-К каждом из них значения параметра $x_0$ было фиксировано.
-Диапазон изменения этого параметра был выбран $[0.2 ; 0.6]$.
-Предварительно была сделана проверка, что за полное время идентификации
-$T= 1000$ все переходные процессы действительно завершились.
-Зависимость полученной ошибки идентификации от значения
-параметра $x_0$ для различных способов оценивания $p_\mathrm{id}$
-представлена на рис.~\ref{atu:f:vg_id_scan}.
+Для визначення похибки ідентифікації без впливу перехідних
+процесів, була проведена серія обчислювальних експериментів.
+На кожному з них значення параметра
+$ x_0 $ було фіксовано. Діапазон зміни цього параметра було обрано
+$ [0,2; 0.6] $. Попередньо була зроблена перевірка, що за повний час
+ідентифікації
+$ T = 1000 $ всі перехідні процеси дійсно завершилися. Залежність
+отриманої похибки ідентифікації від значення параметра
+$ x_0 $ для різних способів оцінювання
+$ p_\mathrm{id} $ представлена на рис.~\ref{atu:f:vg_id_scan}.
 
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.60\textwidth]{p/cha/vg/vg_id-p_p_e_ql3rlWvnAAW_scan.png}
 \end{center}
-  \caption{Зависимости $e(x_0) $ для колебательной системы с гистерезисной возвращающей силой}
+\caption{Залежності $ e (x_0) $ для коливальної системи з гістерезисною силою, що повертає }
 \label{atu:f:vg_id_scan}
 \end{figure}
 
-Анализ полученных зависимостей показывает, что в тех областях, где нарушается монотонность
-критерия, ошибка идентификации значительно возрастает.
-Однако, уровень этой ошибки, за исключением одной узкой области,
-не превышает исходного расстояния между агентами,
-что позволяет сделать вывод том, что система идентификации оказывается работоспособной
-и этом неблагоприятном случае.
+Аналіз отриманих залежностей показує, що в тих областях, де
+порушується монотонність критерію, похибка ідентифікації
+значно зростає. Однак, рівень цієї похибки, за винятком однієї
+вузької області, не перевищує вихідної відстані між агентами,
+що дозволяє зробити висновок, що система ідентифікації
+виявляється працездатною і в цьому несприятливому випадку.
 
-Рассмотрим динамику агентов и идентифицируемого значения (рис.~\ref{atu:f:vg_id_sign}) в случае
-существенно нестационарного параметра.
-При этом динамика величины $x_0(t)$ задаётся (\ref{atu:eq:po_t_sign}),
-$p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
+Розглянемо динаміку агентів і ідентифікованого значення
+(рис.~\ref{atu:f:vg_id_sign}) в разі істотно нестаціонарного параметра. При
+цьому динаміка величини
+$ x_0 (t) $ задається (\ref{atu:eq:po_t_sign}),
+$ p_0 = 0.4 $,
+$ U_p = 0.14 $,
+$ \omega_p = 0.01048 $.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -250,20 +249,20 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_p_ql3rlWvnAAW_sign.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы колебательной системы с гистерезисной возвращающей силой при условии (\ref{atu:eq:po_t_sign})}
+\caption{Динаміка агентів і ідентифікованого значення для системи коливальні системи з гістерезисною силою, що повертає, за умови (\ref{atu:eq:po_t_sign})}
 \label{atu:f:vg_id_sign}
 \end{figure}
 
-В рассматриваемых условиях на величину ошибки идентификации
-негативно влияют два фактора: примыкающий к нулевой частоте
-участок сплошного спектра, а также отсутствие монотонности критерия
-в области минимального значения параметра.
-Это приводит к значительным ошибкам в процессе идентификации,
-при сохранении работоспособности метода.
+У розглянутих умовах на величину похибки ідентифікації
+негативно впливають два фактори: те, що ділянка суцільного спектра примикає до нульової частоті,
+а також відсутність монотонності
+критерію в області мінімального значення параметра. Це
+призводить до значних похибок в процесі ідентифікації, при
+збереженні працездатності методу.
 
 
-На рис.~\ref{atu:f:vg_id_sin}
-приведены аналогичные зависимости, то при условии~(\ref{atu:eq:po_t_sign}).
+На рис.~\ref{atu:f:vg_id_sin} наведені аналогічні залежності, але за
+умови~(\ref{atu:eq:po_t_sign}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -271,28 +270,27 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_t_p_ql3rlWvnAAW_sin.png}
 \end{center}
-  \caption{Динамика агентов и идентифицируемого значения для системы колебательной системы с гистерезисной возвращающей силой при условии (\ref{atu:eq:po_t_sin})}
+\caption{Динаміка агентів і ідентифікованого значення для системи коливальні системи з гістерезисною силою, що повертає, за умови (\ref{atu:eq:po_t_sin})}
 \label{atu:f:vg_id_sin}
 \end{figure}
 
-Более плавное изменение параметра,
-как и в предыдущих случаях,
-приводит к уменьшению ошибки идентификации.
-Однако, вид критерия не позволяет получить
-достаточно малую ошибку идентификации.
+Більш плавна зміна параметра, як і в попередніх випадках,
+призводить до зменшення похибки ідентифікації. Однак,
+вид критерію не дозволяє отримати досить малу похибку
+ідентифікації.
 
 
 
 % }}}2
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации}  % {{{2
+\subsection{Вплив параметрів системи ідентифікації на похибку ідентифікації} % {{{2
 
-Влияние параметра $a_q$ на ошибку идентификации
-для колебательной системы с гистерезисной возвращающей силой
-имеет вид, типичный для систем со спектром,
-примыкающим к нулевой частоте~(рис.~\ref{atu:f:vg_e_a_q}).
-Нет явно выраженного минимума, что свидетельствует
-об ограниченности фильтрующих свойств подхода к усреднению критерия.
+Вплив параметра
+$ a_q $ на похибку ідентифікації для коливальної системи з
+гістерезисною силою, що повертає, має вигляд, типовий для систем зі
+спектром, що прилягає до нульової частоті~(рис.~\ref{atu:f:vg_e_a_q}). Немає
+явно вираженого мінімуму, що свідчить про обмеженість
+фільтруючих властивостей підходу до усереднення критерію.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -300,17 +298,14 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_a_q_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(a_q)$ для колебательной системы с гистерезисной возвращающей силой}
+\caption{Залежності $\bar{e}(a_q) $ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_a_q}
 \end{figure}
 
-На фоне относительно высокой ошибки идентификации,
-определяемой свойствами критерия,
-зависимость от масштаба функции качества
-(рис.~\ref{atu:f:vg_e_q_gamma})
-пренебрежимо мала, если, конечно,
-параметр $q_\gamma$ системы идентификации
-находится в разумных пределах.
+На тлі відносно високої похибки ідентифікації, яка визначається
+властивостями критерію, залежність від масштабу функції якості
+(рис.~\ref{atu:f:vg_e_q_gamma}) досить мала, якщо, звичайно, параметр
+$ q_\gamma $ системи ідентифікації знаходиться в розумних межах.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -318,15 +313,15 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_q_gamma_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(q_\gamma)$ для колебательной системы с гистерезисной возвращающей силой}
+  \caption{Залежності $\bar{e}(q_\gamma)$ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_q_gamma}
 \end{figure}
 
-Свойства критерия $q_{rx}$ для данной системы
-также обуславливают слабую зависимость ошибки идентификации
-от параметра $v_f$ (рис.~\ref{atu:f:vg_e_v_f}).
-Для быстро изменяющегося параметра перемещение агентов
-может быть не порванным.
+Властивості критерію
+$ q_{rx} $ для даної системи також обумовлюють слабку залежність
+похибки ідентифікації від параметра
+$ v_f $ (рис.~\ref{atu:f:vg_e_v_f}).
+Для швидко мінливого параметра переміщення агентів може бути не доцільним.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -334,11 +329,12 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_v_f_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(v_f)$ для колебательной системы с гистерезисной возвращающей силой}
+  \caption{Залежності $\bar{e}(v_f)$ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_v_f}
 \end{figure}
 
-Совершенно аналогичная картина наблюдается для параметра $k_e$~(рис.~\ref{atu:f:vg_e_k_e}).
+Абсолютно аналогічна картина спостерігається для параметра
+$ k_e $~(рис.~\ref{atu:f:vg_e_k_e}).
 
 \begin{figure}[ht!]
 \begin{center}
@@ -346,17 +342,18 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_e_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_e)$ для колебательной системы с гистерезисной возвращающей силой}
+  \caption{Залежності $\bar{e}(k_e)$ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_k_e}
 \end{figure}
 
-Вид зависимости $\bar{e}(k_{nl})$ для рассматриваемой системы имеет определённые
-отличия~(рис.~\ref{atu:f:vg_e_k_nl}).
-Слабо выраженный, но всё же заметный минимум наблюдается
-при значениях $k_{nl}$, практически совпадающих с используемым значением $k_e$.
-Это можно объяснить тем, что большее квазиравновесное расстояние
-между агентами позволяет в какой-то мере нивелировать
-возмущения критерия небольшой амплитуды.
+Вид залежності
+$ \bar{e} (k_{nl}) $ для даної системи має певні
+відмінності~(рис.~\ref{atu:f:vg_e_k_nl}). Слабо виражений, але все ж
+помітний мінімум спостерігається при значеннях
+$k_{nl}$, який практично збігається з використовуваним значенням
+$k_e$. Це можна пояснити тим, що більша квазірівноважна відстань
+між агентами дозволяє в якійсь мірі нівелювати збурення
+критерію невеликої амплітуди.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -364,14 +361,13 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_nl_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{nl})$ для колебательной системы с гистерезисной возвращающей силой}
+  \caption{Залежності $\bar{e}(k_{nl})$ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_k_nl}
 \end{figure}
 
-Использование неоднозначного критерия,
-в совокупности с ограничениями на перемещения агентов
-делает зависимость $\bar{e}(k_{cl})$ (рис.~\ref{atu:f:vdp_e_k_cl})
-практически не наблюдаемой.
+Використання неоднозначного критерію, в сукупності з
+обмеженнями на переміщення агентів робить залежність
+$ \bar{e} (k_{cl}) $ (рис.~\ref{atu:f:vdp_e_k_cl}) практично відсутньою.
 
 
 \begin{figure}[ht!]
@@ -380,7 +376,7 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/vg/vg_id-p_k_cl_sin.png}
 \end{center}
-  \caption{Зависимости $\bar{e}(k_{cl})$ для колебательной системы с гистерезисной возвращающей силой}
+  \caption{Залежності $\bar{e}(k_{cl})$ для коливальної системи з гістерезисною силою, що повертає}
 \label{atu:f:vg_e_k_cl}
 \end{figure}
 
@@ -389,35 +385,34 @@ $p_0=0.4$, $U_p=0.14$, $\omega_p= 0.01048$.
 % }}}2
 
 
-\subsection{Выводы}  % {{{2
+\subsection{Висновки} % {{{2
 
-Результаты моделирования
-как динамики системы~(\ref{atu:eq:vglass})
-так и процессов идентификации её параметра $x_0$
-позволяют в сделать следующие выводы:
+Результати моделювання як динаміки системи~(\ref{atu:eq:vglass}) так і
+процесів ідентифікації її параметра
+$ x_0 $ дозволяють зробити наступні висновки:
 
 \begin{itemize}
 
   \item
-    Колебательная система с гистерезисной возвращающей силой
-    под воздействием внешней гармонического возмущения
-    может демонстрировать различные виды динамик, в
-    том числе сложно-периодическую и хаотическую.
+    Коливальна система з гістерезисною силою, що повертає,
+    під впливом
+    зовнішньої гармонійного збурення може демонструвати різні
+    види динамік, в тому числі складно-періодичну і хаотичну.
 
 
   \item
-    Критерий $q_{rx}$ хоть и подходит для идентификации параметра ``$x_0$''
-    колебательной системы с гистерезисной возвращающей силой,
-    но обладает нарушениями монотонности,
-    что существенно увеличивает ошибку идентификации.
+    Критерій
+    $ q_{rx} $ підходить для ідентифікації параметра ``$x_0$'' коливальної
+    системи з гістерезисною силою, що повертає, але характеризується порушеннями
+    монотонності, що істотно збільшує похибку ідентифікації.
 
   \item
-    Наличие сплошного спектра системы, примыкающего к нулевой частоте,
-    усложняет задачу корректного усреднения критерия.
+    Наявність суцільного спектра системи, що примикає до нульової
+    частоті, ускладнює завдання коректного усереднення критерію.
 
   \item
-    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность
-    даже в условиях использования критерия с ограниченной применимостью.
+    Група методів ql3rlWvnAAW показала свою хорошу працездатність навіть
+    в умовах використання критерію з обмеженими можливостями.
 
 
 \end{itemize}
